--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,8 +10,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 r.DefaultFeature.MotionBlur=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/Pugs001.Pugs001
-GameDefaultMap=/Game/Levels/Pugs001.Pugs001
+EditorStartupMap=/Game/Levels/Main.Main
+GameDefaultMap=/Game/Levels/Main.Main
+
+[/Script/Engine.UserInterfaceSettings]
+DefaultCursor=None
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-600.000000
@@ -50,7 +53,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-[/Script/Engine.UserInterfaceSettings]
-DefaultCursor=None
-
